Готова ЛР №9 ЗДСВ

--- a/Лабораторная работа №9/Project1/backup/project1.lpi
+++ b/Лабораторная работа №9/Project1/backup/project1.lpi
@@ -75,6 +75,9 @@
       <Item>
         <Name Value="EFOpenError"/>
       </Item>
+      <Item>
+        <Name Value="EConvertError"/>
+      </Item>
     </Exceptions>
   </Debugging>
 </CONFIG>
